[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-free-image-moderation"
version = "0.1.2"
description = "Flexible image/GIF moderation pipeline with optional local and API engines"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "py_free_image_moderation maintainers" }]
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
api = ["openai", "requests"]
vision = ["opennsfw2", "nudenet", "ultralytics", "pytesseract"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
moderate-image = "modimg.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["modimg*"]
exclude = ["tests*"]
